# Irene-Voice-Assistant

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LINUX_INSTALL.md  PLUGINS.md  README.adoc  README.md  jaa.py  localhost.crt  localhost.key  minitest_vosk.py  plugin_cmd_help.py  plugins_catalog.json  pyproject.toml  requirements-docker.txt  requirements.txt  requirements_exe_runner.txt  requirements_fixed.txt  runva_cmdline.py  runva_gigastt.py  runva_plugin_installer.py  runva_settings_manager.py  runva_speechrecognition.py  runva_vosk.py  runva_vosk_sherpa.py  runva_voskrem.py  runva_webapi.py  runva_webapi_docker.json  runvacmdline.py  runvaspeechrecognition.py  runvoiceasscmdline.py  runvoiceassvosk.py  vacore.py  voiceasscore.py  vosk_asr_server.py
.github/: FUNDING.yml
docker_plugins/: core.py
docs/: DEV_CONTEXT.md  DEV_PLUGINS.md  DEV_WEBAPI_INTEGRATION.md  INSTALL_DEBUG.md  INSTALL_DOCKER.md  INSTALL_DOCKER_COMP.md  INSTALL_LINUX.md  INSTALL_MAC.md  INSTALL_MULTI.md  INSTALL_WIN.md  INSTALL_WIN_COMPACT.md  PLUGINS.md
eng_to_ipa/: LICENSE  __init__.py  rhymes.py  stress.py  syllables.py  transcribe.py
lingua_franca/: config.py  internal.py  parse.py  time.py
mic_client/: index.html  script.js  waveWorkerMy.js
model/: README
mpcapi/: commands.py  core.py
options/: plugin_tts_vosk.json
options_docker/: core.json
plugins/: core.py  plugin_boltalka_vsegpt.py  plugin_datetime.py  plugin_gamemoreless.py  plugin_greetings.py  plugin_mediacmds.py  plugin_mpchcmult.py  plugin_mqtt.py  plugin_normalizer_numbers.py  plugin_normalizer_prepare.py  plugin_normalizer_runorm.py  plugin_playwav_aplay.py  plugin_playwav_audioplayer.py  plugin_playwav_consolewav.py  plugin_playwav_simpleaudio.py  plugin_playwav_sounddevice.py  plugin_random.py  plugin_timer.py  plugin_tts_console.py  plugin_tts_elevenlabs.py  plugin_tts_lunatranslator_rest.py  plugin_tts_pyttsx.py  plugin_tts_silero_rest.py  plugin_tts_silero_v4.py  plugin_tts_vosk.py  plugin_vasi.py  plugin_voiceover.py  plugin_weather_wttr.py  plugin_weatherowm.py  plugin_yandex_rasp.py  webapi.py
plugins_inactive/: plugin_ai_timer.py  plugin_finstocksmoex.py  plugin_fuzzy_demo.py  plugin_gamemoreless_alt.py  plugin_simpleyandexmusic.py  plugin_tts_opentts.py  plugin_tts_rhvoice.py  plugin_tts_rhvoice_rest.py  plugin_tts_silero.py  plugin_tts_silero_v3.py  plugin_urlopener.py  plugin_voiceover.py  plugin_wikipediasearch.py  plugin_youtubesearch.py
tests/: conftest.py  test_setup_validation.py
utils/: all_num_to_text.py  num_to_text_ru.py  (+1 more)
(+34 files in other folders)
